bg wrapper for fixed background on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,18 @@ body {
 	font-family: "Roboto", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+#bg-wrapper {
+	z-index: -1;
+	background: #939;
+	background: var(--vortami, #939);
+	background: linear-gradient(var(--degree, to top right), var(--bottom, var(--vortami)), var(--top, var(--panash)));
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+}
+
 h1, h2, h3 {
 	font-family: "Montserrat", -apple-system, sans-serif;
 	font-weight: bold;
